RESOLVED FIXED24639
[GTK] GStreamer MediaPlayer is unable to correctly querry duration
https://bugs.webkit.org/show_bug.cgi?id=24639
Summary [GTK] GStreamer MediaPlayer is unable to correctly querry duration
Gustavo Noronha (kov)
Reported 2009-03-16 23:56:42 PDT
When querying time duration of ogg files (which are the only we support for now) gst_element_query_duration currently returns true, and sets the length to 0. We are adding a work-around to our MediaPlayerPrivate class, but this should be fixed in GStreamer.
Attachments
Proposed gst version check (2.27 KB, patch)
2009-09-24 00:55 PDT, Philippe Normand
no flags
Proposed gst version check (with fixed ChangeLog) (2.40 KB, patch)
2009-09-24 01:16 PDT, Philippe Normand
no flags
Thadeu Lima de Souza Cascardo
Comment 1 2009-03-17 00:10:33 PDT
Philippe Normand
Comment 2 2009-09-23 09:24:28 PDT
Fix in GStreamer has been released. The workaround we have can now be removed maybe?
Gustavo Noronha (kov)
Comment 3 2009-09-23 15:50:41 PDT
(In reply to comment #2) > Fix in GStreamer has been released. The workaround we have can now be removed > maybe? With a version check, sure =). Want to write a patch for me to review?
Philippe Normand
Comment 4 2009-09-24 00:55:05 PDT
Created attachment 40049 [details] Proposed gst version check
Philippe Normand
Comment 5 2009-09-24 01:16:48 PDT
Created attachment 40051 [details] Proposed gst version check (with fixed ChangeLog)
Xan Lopez
Comment 6 2009-09-24 01:21:12 PDT
Comment on attachment 40051 [details] Proposed gst version check (with fixed ChangeLog) r=me
WebKit Commit Bot
Comment 7 2009-09-24 03:50:06 PDT
Comment on attachment 40051 [details] Proposed gst version check (with fixed ChangeLog) Clearing flags on attachment: 40051 Committed r48713: <http://trac.webkit.org/changeset/48713>
WebKit Commit Bot
Comment 8 2009-09-24 03:50:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.