2009-09-24  Philippe Normand  <pnormand@igalia.com>

Reviewed by Xan Lopez.

        [GTK] GStreamer MediaPlayer is unable to correctly querry duration
        https://bugs.webkit.org/show_bug.cgi?id=24639

        check duration returned by gst_element_query_duration() only
        when using GStreamer < 0.10.23.

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::MediaPlayerPrivate::duration):

Canonical link: https://commits.webkit.org/40276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48713 268f45cc-cd09-0410-ab3c-d52691b4dbfc