WebCore/platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp
@@ -218,12 +218,17 @@ float MediaPlayerPrivate::duration() const
     GstFormat timeFormat = GST_FORMAT_TIME;
     gint64 timeLength = 0;
 
-    // FIXME: We try to get the duration, but we do not trust the
+#if !GST_CHECK_VERSION(0, 10, 23)
+    // We try to get the duration, but we do not trust the
     // return value of the query function only; the problem we are
     // trying to work-around here is that pipelines in stream mode may
     // not be able to figure out the duration, but still return true!
-    // See https://bugs.webkit.org/show_bug.cgi?id=24639.
+    // See https://bugs.webkit.org/show_bug.cgi?id=24639 which has been
+    // fixed in gst-plugins-base 0.10.23
     if (!gst_element_query_duration(m_playBin, &timeFormat, &timeLength) || timeLength <= 0) {
+#else
+    if (!gst_element_query_duration(m_playBin, &timeFormat, &timeLength)) {
+#endif
         LOG_VERBOSE(Media, "Time duration query failed.");
         return numeric_limits<float>::infinity();
     }
